# grub

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/grub/: base.html  pycode.html
_modules/grub/examples/: py_object_docs.html  pypi.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/grub/: base.rst.txt  examples.rst.txt  pycode.rst.txt
_sources/module_docs/grub/examples/: py_object_docs.rst.txt
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_modules/grub/: base.html  pycode.html
docs/_modules/grub/examples/: pypi.html
docs/module_docs/: grub.html
docs/module_docs/grub/: base.html  examples.html  pycode.html
docs/module_docs/grub/examples/: pypi.html
docsrc/: index.rst  table_of_contents.rst
docsrc/module_docs/: grub.rst
docsrc/module_docs/grub/examples/: pypi.rst
grub/: __init__.py  base.py  doc_strings.py  pycode.py
grub/examples/: __init__.py  py_object_docs.py  pypi.py
misc/: grub_wip.ipynb
module_docs/: grub.html
module_docs/grub/: base.html  examples.html  pycode.html
module_docs/grub/examples/: py_object_docs.html  pypi.html
