[metadata]
name = grub
version = 0.0.10
url = https://github.com/thorwhalen/grub
platforms = any
description_file = README.md
pkg-dir = /D/Dropbox/dev/p3/proj/t/grub
description = A ridiculously simple search engine
root_url = https://github.com/thorwhalen/
author = Thor Whalen
license = apache-2.0

[options]
packages = find:
include_package_data = True
zip_safe = False
install-requires = 
	py2store
	scikit-learn

