[metadata]
name = grub
version = 0.1.0
description = A ridiculously simple search engine
license = apache-2.0
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
	search
	text mining
	natural language processing
	search engine
author = Thor Whalen
display_name = grub

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	py2store
	scikit-learn
		
