[metadata]
name = grub
version = 0.1.4
url = https://github.com/thorwhalen/grub
platforms = any
description_file = README.md
description = A ridiculously simple search engine factory
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
	search
	text mining
	natural language processing
	search engine
author = Thor Whalen
display_name = grub
root_url = https://github.com/thorwhalen

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	py2store
	scikit-learn

